[web] [fix] Replace `overflow: scroll` with `auto` to automatically hide scrollbars
Summary:
After Tomek's comment in D3742, I noticed, that I used `overflow: scroll` in my past diffs, what caused scrollbars to appear even if they weren't necessary.
I missed it, because of "Show scroll bars" setting in macOS set to "when scrolling".
After the change sidebars should not appear in Subchannels and Members modals if there is no need to use them.

Before:
{F45639}
{F45645}
After:
{F45638}
{F45642}

Test Plan: Confirmed that these are the only uses of `overflow: scroll` in web app. Launched Subchannels and Members modals with different macOS scrollbar settings to confirm they look correctly.

Reviewers: palys-swm

Reviewed By: palys-swm

Subscribers: ashoat, Adrian, atul, karol-bisztyga, yayabosh

Differential Revision: https://phabricator.ashoat.com/D3854

--- a/web/modals/threads/members/members-modal.css
+++ b/web/modals/threads/members/members-modal.css
@@ -1,5 +1,5 @@
 div.membersList {
-  overflow: scroll;
+  overflow: auto;
   padding: 8px 0;
   color: var(--members-modal-member-text);
 }
